--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "husky": "0.14.3",
     "jest": "22.4.3",
     "jest-preset-angular": "5.2.2",
+    "jest-junit": "5.0.0",
     "jasmine-reporters": "2.2.1",
     "lint-staged": "7.0.0",
     "moment-locales-webpack-plugin": "1.0.5",
